--- a/arch/arm/configs/XS_defconfig
+++ b/arch/arm/configs/XS_defconfig
@@ -1196,6 +1196,7 @@ CONFIG_TOUCHSCREEN_ATMEL=y
 # CONFIG_TOUCHSCREEN_AD7879_SPI is not set
 # CONFIG_TOUCHSCREEN_AD7879 is not set
 CONFIG_TOUCHSCREEN_CYPRESS_TMA=y
+CONFIG_TOUCHSCREEN_CYPRESS_SWEEP2WAKE=y
 # CONFIG_TOUCHSCREEN_CYPRESS_TMG is not set
 # CONFIG_TOUCHSCREEN_DYNAPRO is not set
 # CONFIG_TOUCHSCREEN_HAMPSHIRE is not set
@@ -1213,10 +1214,6 @@ CONFIG_TOUCHSCREEN_ELAN_KTF2K=y
 # CONFIG_TOUCHSCREEN_PENMOUNT is not set
 # CONFIG_TOUCHSCREEN_MSM is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI is not set
-CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE=y
-CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_DISABLED=y
-# CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_ENABLED is not set
-# CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_ENABLED_WITH_BACKLIGHT is not set
 # CONFIG_TOUCHSCREEN_COMPATIBLE_REPORT is not set
 # CONFIG_TOUCHSCREEN_CONCATENATE_REPORT is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_T1021 is not set
@@ -1663,7 +1660,7 @@ CONFIG_USB_ARCH_HAS_HCD=y
 # CONFIG_USB_ARCH_HAS_OHCI is not set
 # CONFIG_USB_ARCH_HAS_EHCI is not set
 CONFIG_USB=y
-# CONFIG_USB_OTG is not set
+CONFIG_USB_OTG=y
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 # CONFIG_USB_MON is not set
