--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -224,6 +224,14 @@ config CPU_FREQ_GOV_CONSERVATIVE
 
 	  If in doubt, say N.
 
+config CPU_FREQ_VDD_LEVELS
+  	bool "CPU Vdd levels sysfs interface"
+  	depends on CPU_FREQ_STAT
+  	depends on ARCH_MSM7X30
+  	default n
+ 	help
+    	CPU Vdd levels sysfs interface
+
 config CPU_FREQ_MIN_TICKS
 	int "Ticks between governor polling interval."
 	default 10
