--- a/arch/arm/configs/Redux_defconfig
+++ b/arch/arm/configs/Redux_defconfig
@@ -30,7 +30,7 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-XS-ICS-v2.3"
+CONFIG_LOCALVERSION="-Redux-Kernel-0.1"
 #CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -153,10 +153,10 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_VR=y
 # CONFIG_DEFAULT_CFQ is not set
-# CONFIG_DEFAULT_NOOP is not set
+CONFIG_DEFAULT_NOOP=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_SIO=y
-CONFIG_DEFAULT_IOSCHED="sio"
+# CONFIG_DEFAULT_SIO is not set
+CONFIG_DEFAULT_IOSCHED="noop"
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_VR is not set
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
@@ -352,8 +352,10 @@ CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
 CONFIG_CMDLINE_OPTIONS=y
 # CONFIG_MSM_CPU_FREQ_SCREEN is not set
-CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=806400
-CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=245000
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=1024000
+CONFIG_MSM_CPU_FREQ_MIN=245760
+CONFIG_ACPUCLOCK_OVERCLOCKING=y
 # CONFIG_MSM_HW3D is not set
 # CONFIG_HTC_ACOUSTIC is not set
 CONFIG_MSM_ADSP_REPORT_EVENTS=y
@@ -370,7 +372,7 @@ CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_MMC_SUPPORT_EXTERNEL_DRIVER is not set
 # CONFIG_MMC_BUSCLK_PWRSAVE is not set
 # CONFIG_VIRTUAL_KPANIC_PARTITION is not set
-CONFIG_ARCH_MSM_FLASHLIGHT=y
+#CONFIG_ARCH_MSM_FLASHLIGHT is not set
 CONFIG_FLASHLIGHT_AAT1271=y
 CONFIG_MICROP_COMMON=y
 CONFIG_HTC_HEADSET_MGR=y
@@ -508,8 +510,8 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCARY is not set
-# CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
-# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
@@ -518,6 +520,12 @@ CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_LAZY=y
 CONFIG_CPU_FREQ_GOV_LAGFREE=y
+CONFIG_LAGFREE_MAX_LOAD=80
+CONFIG_LAGFREE_MIN_LOAD=20
+CONFIG_LAGFREE_FREQ_STEP_DOWN=108000
+CONFIG_LAGFREE_FREQ_SLEEP_MAX=384000
+CONFIG_LAGFREE_FREQ_AWAKE_MIN=384000
+CONFIG_LAGFREE_FREQ_STEP_UP_SLEEP_PERCENT=20
 CONFIG_CPU_FREQ_GOV_SAVAGEDZEN=y
 CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
@@ -920,7 +928,7 @@ CONFIG_BTPORT_DRV=y
 # Some wireless drivers require a rate control algorithm
 #
 # HTC_WIFI_START
-CONFIG_CFG80211=m
+CONFIG_CFG80211=y
 CONFIG_NL80211_TESTMODE=y
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 # CONFIG_CFG80211_REG_DEBUG is not set
@@ -931,7 +939,7 @@ CONFIG_CFG80211_WEXT=y
 CONFIG_WIRELESS_EXT_SYSFS=y
 CONFIG_LIB80211=m
 # CONFIG_LIB80211_DEBUG is not set
-CONFIG_MAC80211=m
+CONFIG_MAC80211=y
 CONFIG_MAC80211_HAS_RC=y
 # CONFIG_MAC80211_RC_PID is not set
 CONFIG_MAC80211_RC_MINSTREL=y
@@ -1126,7 +1134,7 @@ CONFIG_DUMMY=y
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
 # CONFIG_EQUALIZER is not set
-CONFIG_TUN=y
+CONFIG_TUN=m
 CONFIG_BRIDGE_NETFILTER=y
 # CONFIG_VETH is not set
 # CONFIG_NET_ETHERNET is not set
@@ -1789,7 +1797,7 @@ CONFIG_USB_ANDROID_RNDIS=y
 # CONFIG_USB_ANDROID_RNDIS_WCEIS is not set
 CONFIG_USB_ANDROID_ACCESSORY=y
 CONFIG_USB_ANDROID_SERIAL=y
-CONFIG_USB_ANDROID_PROJECTOR=y
+#CONFIG_USB_ANDROID_PROJECTOR is not set
 CONFIG_USB_ACCESSORY_DETECT=y
 CONFIG_USB_ACCESSORY_DETECT_BY_ADC=y
 CONFIG_CABLE_DETECT_8X55=y
@@ -1824,7 +1832,7 @@ CONFIG_MMC=y
 CONFIG_MMC_PERF_PROFILING=y
 CONFIG_MMC_UNSAFE_RESUME=y
 # CONFIG_MMC_CLKGATE is not set
-# CONFIG_MMC_EMBEDDED_SDIO=y
+# CONFIG_MMC_EMBEDDED_SDIO is not set
 CONFIG_MMC_PARANOID_SD_INIT=y
 
 #
@@ -2068,7 +2076,7 @@ CONFIG_FAT_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-CONFIG_NTFS_FS=y
+CONFIG_NTFS_FS=m
 
 #
 # Pseudo filesystems
@@ -2109,7 +2117,7 @@ CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFSD is not set
 # CONFIG_SMB_FS is not set
 # CONFIG_CEPH_FS is not set
-CONFIG_CIFS=y
+CONFIG_CIFS=m
 # CONFIG_NCP_FS is not set
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
