--- a/arch/arm/configs/Redux_defconfig
+++ b/arch/arm/configs/Redux_defconfig
@@ -113,7 +113,8 @@ CONFIG_PERF_USE_VMALLOC=y
 # CONFIG_PERF_COUNTERS is not set
 CONFIG_VM_EVENT_COUNTERS=y
 CONFIG_COMPAT_BRK=y
-CONFIG_SLAB=y
+CONFIG_SLQB=y
+# CONFIG_SLAB is not set
 # CONFIG_SLUB is not set
 # CONFIG_SLOB is not set
 # CONFIG_PROFILING is not set
@@ -2193,7 +2194,10 @@ CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=0
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_SCHEDSTATS is not set
 CONFIG_TIMER_STATS=y
-CONFIG_SLUB_DEBUG_ON=y
+CONFIG_SLQB_DEBUG=y
+# CONFIG_SLQB_DEBUG_ON is not set
+# CONFIG_SLQB_SYSFS is not set
+# CONFIG_SLUB_DEBUG_ON is not set
 # CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_DEBUG_SLAB is not set
 # CONFIG_DEBUG_PREEMPT is not set
