--- a/arch/arm/configs/Redux_defconfig
+++ b/arch/arm/configs/Redux_defconfig
@@ -578,7 +578,7 @@ CONFIG_VIRT_TO_BUS=y
 # CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_NEED_PER_CPU_KM=y
-CONFIG_CLEANCACHE=y
+# CONFIG_CLEANCACHE is not set
 # CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG is not set
 # CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
