--- a/arch/arm/configs/Redux_defconfig
+++ b/arch/arm/configs/Redux_defconfig
@@ -1,4 +1,4 @@
- 
+
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
 CONFIG_GENERIC_GPIO=y
@@ -931,8 +931,8 @@ CONFIG_BT_HID_BRCM=y
 # CONFIG_MSM_BT_POWER is not set
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
-# CONFIG_WIRELESS is not set
-# CONFIG_WIRELESS_EXT is not set
+CONFIG_WIRELESS=y
+CONFIG_WIRELESS_EXT=y
 CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
 CONFIG_WEXT_PRIV=y
@@ -1161,7 +1161,7 @@ CONFIG_BRIDGE_NETFILTER=y
 CONFIG_NETDEV_10000=y
 # CONFIG_HOSTAP is not set
 CONFIG_BCMDHD=m
-# CONFIG_BCMDHD_SOFTAP is not set
+CONFIG_BCMDHD_SOFTAP=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcm4329_apsta_b2.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/proc/calibration"
 CONFIG_BCM4329_248=m
@@ -1641,6 +1641,7 @@ CONFIG_FB_MSM=y
 CONFIG_FB_MSM_OVERLAY=y
 # CONFIG_FB_MSM_DTV is not set
 CONFIG_GPU_MSM_KGSL=y
+CONFIG_MSM_KGSL_2D=y
 CONFIG_GPU_MSM_KGSL_ADRENO205=y
 CONFIG_MSM_ROTATOR=y
 CONFIG_MSM_ROTATOR_USE_IMEM=y
@@ -2051,9 +2052,9 @@ CONFIG_WL12XX_PLATFORM_DATA=y
 # CONFIG_EXT2_FS_POSIX_ACL is not set
 # CONFIG_EXT2_FS_SECURITY is not set
 # CONFIG_EXT2_FS_XIP is not set
-# CONFIG_EXT3_FS is not set
+CONFIG_EXT3_FS=y
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
-# CONFIG_EXT3_FS_XATTR is not set
+CONFIG_EXT3_FS_XATTR=y
 # CONFIG_EXT3_FS_POSIX_ACL is not set
 # CONFIG_EXT3_FS_SECURITY is not set
 CONFIG_EXT4_FS=y
